# ai-flashcards-api

./: .gitignore  database.db  pyproject.toml
src/: main.py
src/db/: session.py
src/models/: deck.py  flashcard.py  usage_log.py
src/schemas/: deck_schemas.py  flashcard_schemas.py
src/services/: ai_orchestrator.py  usage_service.py
src/utils/: config.py  groq_client.py
