[project]
name = "ai-flashcards-api"
version = "0.1.0"
description = ""
authors = [
    {name = "Gustavo Mello",email = "GMELLOCONTACT@GMAIL.COM"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi (>=0.128.0,<0.129.0)",
    "sqlmodel (>=0.0.31,<0.0.32)",
    "uvicorn (>=0.40.0,<0.41.0)",
    "python-dotenv (>=1.2.1,<2.0.0)",
    "groq (>=1.0.0,<2.0.0)",
    "requests (>=2.32.5,<3.0.0)"
]

[tool.poetry]
packages = [{include = "ai_flashcards", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
